# shira_audio

./: .gitignore  LICENSE  README.md  notes.md  pyproject.toml  sandbox.py  shira_article.md  shira_clap.ipynb
.github/workflows/: publish.yml
mini_clap/: clap.py
shira/: __init__.py  audio_search.py  cli.py  utils.py
src/shira/: __init__.py  audio_search.py  utils.py
src/wavsearch/: __init__.py  audio_search.py  utils.py
