[project]
name = "shira_audio"
version = "0.1.0"
description = "audio search/retrieval library"
authors = [{ name = "Chibuzo Kelechi", email = "kelechichibuzo7@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "datasets",
    "librosa",
    "faiss-cpu",
    "transformers",
    "faiss-gpu",
    "numpy",
    "pydub"
]
keywords = [
	'machine learning',
	'audio retrieval',
	'multimodal',
	'semantic search',
	'vector embeddings'
]

[project.urls]
Homepage = "https://pypi.org/project/shira_audio/"
Repository = "https://github.com/kelechi-c/shira"

[tool.setuptools.packages.find]
where =["."]
include = ["shira*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["shira"]